# internal/controller/http/router.go
@@ -48,7 +48,7 @@ func NewRouter(app *fiber.App, cfg *config.Config, u v1.Usecases, l logger.Inter
 		v1.NewSignaRoutes(apiV1Group, u.Signa, l)
 		v1.NewPatientRoutes(apiV1Group, u.Patient, l)
 		v1.NewMedicineRoutes(apiV1Group, u.Medicine, l)
-		v1.NewTransactionRoutes(apiV1Group, u.Transaction, u.MedicineDetail, u.Medicine, u.Patient, u.Midtrans, l)
+		v1.NewTransactionRoutes(apiV1Group, u.Transaction, u.MedicineDetail, u.Medicine, u.Patient, l)
 		v1.NewMedicineDetailRoutes(apiV1Group, u.MedicineDetail, l)
 		// Add other routes here
 	}
