# internal/controller/http/v1/router.go
@@ -3,7 +3,6 @@ package v1
 import (
 	"go-eprescription-clean/internal/usecase"
 	"go-eprescription-clean/pkg/logger"
-	"go-eprescription-clean/pkg/midtrans"
 	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
 )
@@ -69,14 +68,13 @@ func NewMedicineRoutes(apiV1Group fiber.Router, m usecase.Medicine, l logger.Int
 }
 
 // NewTransactionRoutes -.
-func NewTransactionRoutes(apiV1Group fiber.Router, t usecase.Transaction, md usecase.MedicineDetail, m usecase.Medicine, p usecase.Patient, mtClient *midtrans.SnapClient, l logger.Interface) {
+func NewTransactionRoutes(apiV1Group fiber.Router, t usecase.Transaction, md usecase.MedicineDetail, m usecase.Medicine, p usecase.Patient, l logger.Interface) {
 	r := &V1{
 		u: Usecases{
 			Transaction:   t,
 			MedicineDetail: md,
 			Medicine: m,
 			Patient: p,
-			Midtrans: mtClient,
 		},
 		l: l,
 		v: validator.New(),
@@ -90,7 +88,8 @@ func NewTransactionRoutes(apiV1Group fiber.Router, t usecase.Transaction, md use
 		transactionGroup.Post("/", r.createTransactionWithMedDetail)
 		transactionGroup.Patch("/:id", r.updateTransaction)
 		transactionGroup.Delete("/:id", r.deleteTransaction)
-		transactionGroup.Post("/callbacks", r.handleMidtransCallback)
+		transactionGroup.Post("/midtrans/callbacks", r.handleMidtransCallback)
+		transactionGroup.Post("/xendit/callbacks", r.handleXenditCallback)
 	}
 }
 
