# internal/controller/http/v1/transaction.go
@@ -233,7 +233,7 @@ func (r *V1) deleteTransaction(ctx *fiber.Ctx) error {
 // @Success     200 {object} response.SuccessString
 // @Failure     400 {object} response.Error
 // @Failure     500 {object} response.Error
-// @Router      /transactions/midtrans-callbacks [post]
+// @Router      /transactions/midtrans/callbacks [post]
 func (r *V1) handleMidtransCallback(ctx *fiber.Ctx) error {
 	body := ctx.Body()
 	r.l.Info(fmt.Sprintf("Midtrans callback payload: %s", string(body)))
@@ -244,27 +244,63 @@ func (r *V1) handleMidtransCallback(ctx *fiber.Ctx) error {
 		return errorResponse(ctx, http.StatusBadRequest, "invalid midtrans payload")
 	}
 
+	transactionID, ok1 := payload["order_id"].(string)
+	transactionStatus, ok2 := payload["transaction_status"].(string)
+	fraudStatus, ok3 := payload["fraud_status"].(string)
+
+	if !ok1 || !ok2 || !ok3 {
+		r.l.Error("Missing required fields in midtrans callback")
+		return errorResponse(ctx, http.StatusBadRequest, "missing fields in midtrans payload")
+	}
+
+	_, err := r.u.Transaction.HandleMidtransNotification(ctx.UserContext(), transactionID, transactionStatus, fraudStatus)
+	if err != nil {
+		r.l.Error(fmt.Sprintf("Failed to handle midtrans notification: %v", err))
+		return errorResponse(ctx, http.StatusInternalServerError, "failed to process midtrans callback")
+	}
+
+	return ctx.SendStatus(http.StatusOK)
+}
+
+// @Summary     Handle Xendit callback notification
+// @Description Receives and processes callback notifications from Xendit
+// @ID          handle-xendit-callback
+// @Tags        transaction
+// @Accept      json
+// @Produce     json
+// @Param       payload body object true "Xendit Notification Payload"
+// @Success     200 {object} response.SuccessString
+// @Failure     400 {object} response.Error
+// @Failure     500 {object} response.Error
+// @Router      /transactions/xendit/callbacks [post]
+func (r *V1) handleXenditCallback(ctx *fiber.Ctx) error {
+	body := ctx.Body()
+	r.l.Info(fmt.Sprintf("Xendit callback payload: %s", string(body)))
+
+	var payload map[string]interface{}
+	if err := json.Unmarshal(body, &payload); err != nil {
+		r.l.Error(fmt.Sprintf("Failed to unmarshal Xendit callback: %v", err))
+		return errorResponse(ctx, http.StatusBadRequest, "invalid xendit payload")
+	}
+
 	//print transaction ID, status, and fraud status
-	// r.l.Info(fmt.Sprintf("Midtrans callback transaction ID: %s", payload["transaction_id"]))
-	// r.l.Info(fmt.Sprintf("Midtrans callback order ID: %s", payload["order_id"]))
-	// r.l.Info(fmt.Sprintf("Midtrans callback transaction status: %s", payload["transaction_status"]))
-	// r.l.Info(fmt.Sprintf("Midtrans callback fraud status: %s", payload["fraud_status"]))	
+	r.l.Info(fmt.Sprintf("Xendit callback transaction ID: %s", payload["external_id"]))
+	r.l.Info(fmt.Sprintf("Xendit callback status: %s", payload["status"]))
 
-	// transactionID, ok1 := payload["order_id"].(string)
-	// transactionStatus, ok2 := payload["transaction_status"].(string)
-	// fraudStatus, ok3 := payload["fraud_status"].(string)
+	transactionID, ok1 := payload["external_id"].(string)
+	transactionStatus, ok2 := payload["status"].(string)
 
-	// if !ok1 || !ok2 || !ok3 {
-	// 	r.l.Error("Missing required fields in midtrans callback")
-	// 	return errorResponse(ctx, http.StatusBadRequest, "missing fields in midtrans payload")
-	// }
+	if !ok1 || !ok2 {
+		r.l.Error("Missing required fields in xendit callback")
+		return errorResponse(ctx, http.StatusBadRequest, "missing fields in xendit payload")
+	}
 
-	// err := r.u.Transaction.HandleMidtransNotification(ctx.UserContext(), transactionID, transactionStatus, fraudStatus)
-	// if err != nil {
-	// 	r.l.Error(fmt.Sprintf("Failed to handle midtrans notification: %v", err))
-	// 	return errorResponse(ctx, http.StatusInternalServerError, "failed to process midtrans callback")
-	// }
+	_, err := r.u.Transaction.HandleXenditNotification(ctx.UserContext(), transactionID, transactionStatus)
+	if err != nil {
+		r.l.Error(fmt.Sprintf("Failed to handle xendit notification: %v", err))
+		return errorResponse(ctx, http.StatusInternalServerError, "failed to process xendit callback")
+	}
 
-	return ctx.SendStatus(http.StatusOK) // Respond with 200 OK to acknowledge receipt
+	return ctx.SendStatus(http.StatusOK) 
 }
 
